# origin

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
plans/librilight_training/: librilight_training_001.md
plans/research/: .gitignore  README.md  autoencoder.md  autoencoder_feasibility.md  open_source_refs.md  paper_notes.md  supertonic_versions.md
plans/research/onnx_re/: README.md  download.py  inspect_config.py  inspect_shapes.py  inspect_unicode.py  inspect_voice_style.py
plans/research/onnx_re/models/: .gitignore
scripts/: reconstruct.sh  train_prepare.sh  train_scratch.sh
src/: autoencoder.py  batch.py  config.py  constants.py  decode.py  discriminators.py  encode.py  losses.py  modules.py  train.py
src/nn/: autoencoder.py  data.py  losses.py
